--- a/package.json
+++ b/package.json
@@ -41,5 +41,6 @@
   "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 16.0.4.",
   "main": "server.js",
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "keywords": []
 }
